# VoiceStudio

./: .gitignore  LICENSE  README.md  embedding.ipynb  evaluate.py  evaluation.py  example.ipynb  example_bos.ipynb  example_dual.ipynb  main.py  model.spec  model_training.ipynb  model_zoo.ipynb  pyproject.toml  synthesize.py  training_notebook_Mingwan.ipynb
benchmark_datasets/: ljspeech.py  vctk.py
config/: __init__.py  synthesis_config.py
datasets/: __init__.py  base.py  ljspeech.py  vctk.py
higgs-audio/boson_multimodal/model/higgs_audio/: modeling_higgs_audio.py
metrics/: base.py  ffe.py  mcd.py  sim.py  wer.py
models/: __init__.py  base.py  chatterbox_tts.py  higgs_v2.py  parler_tts.py  xtts.py
src/t2a_lora/: __init__.py
src/t2a_lora/adapters/: config.py
src/t2a_lora/datasets/: __init__.py  libritts.py  libritts_p.py  libritts_p2.py
src/t2a_lora/metrics/: __init__.py  utmos.py  wer.py
src/t2a_lora/metrics/strategies/: __init__.py  base.py  method1.py
src/t2a_lora/models/models/: __init__.py  base.py
src/t2a_lora/utils/: attention_map.py  evaluate.py  losses.py  synthesize.py  trainer.py
src_Mingwan/: __init__.py  config.py
src_Mingwan/data_loading/: __init__.py  dataset.py
src_Mingwan/models/: __init__.py  hypernetwork.py  tts_lora.py
src_Mingwan/training/: __init__.py  trainer.py
strategies/: __init__.py  method1.py  method2.py  method3.py
utils/: __init__.py
voicestudio/components/clam/: modular_clam.py
voicestudio/components/style_anchor/: __init__.py
voicestudio/datasets/: __init__.py  base.py  libritts.py  libritts_p3.py
voicestudio/metrics/: __init__.py  base.py  ffe.py  mcd.py  sim.py  utmos.py  wer.py
voicestudio/metrics/presets/: __init__.py  synthesis_config.py
voicestudio/metrics/strategies/: __init__.py  base.py  method1.py  method2.py  method3.py
voicestudio/models/chroma/: __init__.py  configuration_chroma.py  modeling_chroma.py  processing_chroma.py
voicestudio/models/dia/: __init__.py
voicestudio/models/higgs_audio/: __init__.py  configuration_higgs_audio.py  modeling_higgs_audio.py  processing_higgs_audio.py
voicestudio/models/integrations/: __init__.py  base.py  dia_tts.py  higgs_v2.py  parler_tts.py  xtts.py
voicestudio/models/parler_tts/: __init__.py  configuration_parler_tts.py  modeling_parler_tts.py
voicestudio/models/qwen3_tts/: __init__.py  configuration_qwen3_tts.py  modeling_qwen3_tts.py  processing_qwen3_tts.py
voicestudio/models/selective_tuner/: __init__.py  configuration_selective_tuner.py  modeling_selective_tuner.py
voicestudio/models/spark_tts/: __init__.py  configuration_spark_tts.py  modeling_spark_tts.py  processing_spark_tts.py
voicestudio/utils/: attention_map.py  audio_utils.py  evaluate.py  loader.py  synthesize.py  trainer.py
