[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "t2a-lora"
version = "0.1.0"
description = "T2A-LoRA: Text-to-Audio LoRA Generation via Hypernetworks for Real-time Voice Adaptation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LatentForge", email = "latentforge.org"}
]
keywords = ["text-to-speech", "lora", "hypernetworks", "voice-synthesis", "audio-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "torch ; platform_system == 'Windows'",
    "torch>=2.8.0",
    "torchaudio ; platform_system == 'Windows'",
    "torchaudio>=2.8.0",
    "transformers>=4.55.2",
    "accelerate>=1.10.0",
    "peft>=0.17.1",

    "datasets>=4.0.0",
    "hf-xet>=1.1.8",

    "tqdm>=4.67.1",
    "wandb>=0.21.1",
    "notebook>=7.4.5",
    "ipywidgets>=8.1.7",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
torchaudio = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]

[project.urls]
Homepage = "https://github.com/LatentForge/T2A-LoRA"
Repository = "https://github.com/LatentForge/T2A-LoRA"
Documentation = "https://latentforge.github.io/T2A-LoRA"
