[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "voicestudio"
version = "1.0.1"
description = "VoiceStudio: A unified toolkit for text-style prompted speech synthesis, voice adaptation, and editing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "LatentForge", email = "brew.airesearch@gmail.com" }
]
keywords = [ "text-to-speech", "voice-synthesis", "audio-generation", "lora", "hypernetworks" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    # -----------------------------------------
    # General dependencies
    # -----------------------------------------
    "numpy>=2.3.5",
    "torch ; platform_system == 'Windows'",
    "torch>=2.8.0",
    "torchaudio ; platform_system == 'Windows'",
    "torchaudio>=2.8.0",
    "torchcodec>=0.9.1",
    "librosa>=0.11.0",
    #"transformers>=5.0.0rc2",
    "transformers>=4.57.3",
    "hf-xet>=1.1.8",
    "tqdm>=4.67.1",
    # -----------------------------------------
    # Model Namespace Packages
    # -----------------------------------------
    "voicestudio-parler-tts",  # Apache 2.0 License
    "voicestudio-higgs-audio",  # Apache 2.0 License
    "voicestudio-qwen3-tts",  # Apache 2.0 License
    "voicestudio-chroma",  # Apache 2.0 License
    "voicestudio-spark-tts",  # Apache 2.0 License
    "voicestudio-cosyvoice",  # Apache 2.0 License
    "voicestudio-f5-tts",  # MIT License
    # -----------------------------------------
    # Audio Processing Dependencies
    # -----------------------------------------
    "descript-audiotools",  # for Parler TTS, Higgs Audio
    "vocos",  # for F5 TTS
]
[project.optional-dependencies]
all = [
    "voicestudio[train]",
    "voicestudio[eval]",
    "voicestudio[flash-prebuilt]",
    "voicestudio[onnx]",
    "voicestudio[web]",
]
train = [
    "accelerate>=1.10.0",
    "matplotlib>=3.10.5",
    "wandb>=0.21.1",
    "notebook>=7.4.5",
    "ipywidgets>=8.1.7",
]
eval = [
    "pyworld>=0.3.5",
    "pysptk>=1.0.1",
    "jiwer>=4.0.0",
    "utmosv2",
]
flash = [ "flash-attn" ]
flash-prebuilt = [
    # Linux x86_64 (manylinux)
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.11' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.12' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.13' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp314-cp314-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.14' and platform_system == 'Linux' and platform_machine == 'x86_64'",

    # Linux aarch64 (manylinux)
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp311-cp311-manylinux_2_34_aarch64.whl ; python_version == '3.11' and platform_system == 'Linux' and platform_machine == 'aarch64'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp312-cp312-manylinux_2_34_aarch64.whl ; python_version == '3.12' and platform_system == 'Linux' and platform_machine == 'aarch64'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp313-cp313-manylinux_2_34_aarch64.whl ; python_version == '3.13' and platform_system == 'Linux' and platform_machine == 'aarch64'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp314-cp314-manylinux_2_34_aarch64.whl ; python_version == '3.14' and platform_system == 'Linux' and platform_machine == 'aarch64'",

    # Windows x86_64
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp311-cp311-win_amd64.whl ; python_version == '3.11' and platform_system == 'Windows'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp312-cp312-win_amd64.whl ; python_version == '3.12' and platform_system == 'Windows'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu126torch2.10-cp313-cp313-win_amd64.whl ; python_version == '3.13' and platform_system == 'Windows'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu130torch2.10-cp314-cp314-win_amd64.whl ; python_version == '3.14' and platform_system == 'Windows'",
]
onnx = [  # for Qwen3-TTS, CosyVoice
    "onnxruntime-gpu[cuda,cudnn]>=1.18.0 ; platform_system == 'linux' or platform_system == 'windows'",
    "onnxruntime>=1.18.0 ; platform_system == 'darwin'",
    "onnx",
]
# -----------------------------------------
# Voice Studio Web
# -----------------------------------------
web = [
    "fastapi>=0.126.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
torchaudio = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
voicestudio-parler-tts = { git = "https://github.com/latentforge/parler-tts", rev = "namespace" }
voicestudio-higgs-audio = { git = "https://github.com/latentforge/higgs-audio", rev = "namespace" }
voicestudio-qwen3-tts = { git = "https://github.com/latentforge/Qwen3-TTS", rev = "namespace" }
voicestudio-chroma = { git = "https://github.com/latentforge/Chroma", rev = "namespace" }
voicestudio-spark-tts = { git = "https://github.com/latentforge/Spark-TTS", rev = "namespace" }
voicestudio-cosyvoice = { git = "https://github.com/latentforge/CosyVoice", rev = "namespace" }
voicestudio-f5-tts = { git = "https://github.com/latentforge/f5-tts", rev = "namespace" }
descript-audiotools = { git = "https://github.com/latentforge/audiotools" }
vocos = { git = "https://github.com/latentforge/vocos" }
speechbrain = { git = "https://github.com/latentforge/speechbrain", rev = "fix/support_torch2.9" }
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2" }

[tool.uv.extra-build-dependencies]
flash-attn = [ "torch" ]

[[tool.uv.index]]
name = "pytorch-windows"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = [ "voicestudio" ]

[project.urls]
Homepage = "https://latentforge.github.io/"
Repository = "https://github.com/LatentForge/VoiceStudio"
